After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 647263 - REGRESSION: rtpsession: fix wrongly applied patch
REGRESSION: rtpsession: fix wrongly applied patch
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal blocker
: 0.10.29
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-04-09 10:49 UTC by Håvard Graff (hgr)
Modified: 2011-04-09 11:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.76 KB, patch)
2011-04-09 10:49 UTC, Håvard Graff (hgr)
none Details | Review
patch (1.77 KB, patch)
2011-04-09 11:20 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2011-04-09 10:49:52 UTC
Created attachment 185579 [details] [review]
patch

Something must have gone wrong somewhere, but suddenly the send_rtcp_src was forwarding events to recv_rtp_sink, as well as double-unreffing the event.

This patch should fix it right up! :)
Comment 1 Håvard Graff (hgr) 2011-04-09 11:20:24 UTC
Created attachment 185580 [details] [review]
patch

make it apply against HEAD... :)
Comment 2 Tim-Philipp Müller 2011-04-09 11:33:43 UTC
commit 93f022d6abb4c73e3bb6e090a3b3f43895f747f1
Author: Havard Graff <havard.graff@tandberg.com>
Date:   Sat Apr 9 12:41:48 2011 +0200

    rtpsession: fix wrongly applied patch
    
    Obviously recv_rtp_sink does not have much to do with send_rtcp_src...
    See commit 046ff170.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=647263