gst/rtpmanager/gstrtpsession.c
@@ -1646,17 +1646,13 @@ gst_rtp_session_event_send_rtcp_src (GstPad * pad, GstEvent * event)
 {
   GstRtpSession *rtpsession;
   gboolean ret = TRUE;
-  gboolean handled = FALSE;
-
-  rtpsession = GST_RTP_SESSION (gst_pad_get_parent (pad));
-
-  GST_DEBUG_OBJECT (rtpsession, "received EVENT");
 
   rtpsession = GST_RTP_SESSION (gst_pad_get_parent (pad));
   if (G_UNLIKELY (rtpsession == NULL)) {
     gst_event_unref (event);
     return FALSE;
   }
+  GST_DEBUG_OBJECT (rtpsession, "received EVENT");
 
   switch (GST_EVENT_TYPE (event)) {
     case GST_EVENT_SEEK:
@@ -1672,25 +1668,6 @@ gst_rtp_session_event_send_rtcp_src (GstPad * pad, GstEvent * event)
   }
 
   gst_object_unref (rtpsession);
-
-  if (handled)
-    gst_event_unref (event);
-  else {
-    GstPad *recv_rtp_sink = NULL;
-    GST_RTP_SESSION_LOCK (rtpsession);
-    if (rtpsession->recv_rtp_sink)
-      recv_rtp_sink = gst_object_ref (rtpsession->recv_rtp_sink);
-    GST_RTP_SESSION_UNLOCK (rtpsession);
-
-    if (recv_rtp_sink) {
-      ret = gst_pad_push_event (recv_rtp_sink, event);
-      gst_object_unref (recv_rtp_sink);
-    } else
-      gst_event_unref (event);
-  }
-
-  gst_object_unref (rtpsession);
-
   return ret;
 }
 
